fixed menu links spacing. uniform styling for recipes and ingredients

--- a/cookies.css
+++ b/cookies.css
@@ -26,17 +26,13 @@ img {
   border-radius: 1em;
 }
 
-ul {
-  margin: 0;
-  list-style-position: inside;
-  list-style: circle;
+ul, ol {
+  margin: 1em;
   padding: 0;
 }
 
-ol {
-  margin: 0;
-  padding: 0;
-  list-style-position: inside;  
+ul {
+  list-style: circle;
 }
 
 li, p {
